# analisis_ill_nelier

./: .gitignore  README.md  pyproject.toml
modelo/: .Cue.wea.swp  A10-1.rad  A10-2.rad  A20-1.rad  A20-2.rad  A40-1.rad  A40-1.rif  A40-2.rad  Temixco_dias.wea  ambfile.amb  materiales.rad
modelo/matrices/: workplane.pts
modelo/objects/: A10-1.pts  A10-2.pts  A20-1.pts  A20-2.pts  A40-1.pts  A40-2.pts  Alero_sur.rad  ConcretoA10.rad  ConcretoA20.rad  ConcretoA40.rad  ConcretoA402.rad  Concreto_pulidopb.rad  DGPu_A10-1.pts  DGPu_A10-2.pts  DGPu_A20-1.pts  DGPu_A20-2.pts  DGPu_A40-1.pts  DGPu_A40-2.pts  Edificio2.rad  EdificioA10.rad  EdificioA102.rad  EdificioA20.rad  EdificioA202.rad  EdificioA40.rad  EdificioA402.rad  EdificioN1.rad  EdificioN2.rad  Edificiopb.rad  Muros_blancosA10.rad  Muros_blancosA20.rad  Muros_blancosA40.rad  Muros_blancosA402.rad  ProteccionesA10.rad  ProteccionesA20.rad  ProteccionesA40.rad  VA10.rad  VA20.rad  VA40.rad  VA402.rad  VentanaA10.rad  (+8 more)
modelo/octrees/: A40-1.oct  A40-2.oct  aula.oct  sunCoefficientsDDS_A40-1.oct  sunCoefficientsDDS_A40-2.oct
modelo/skies/: cielo.rad  dc_sky.rad  dc_sky_noground.rad
modelo/views/: A10-1.vf  A10-2.vf  A20-1.vf  A20-2.vf  A40-1N.vf  (+3 more)
notebooks/: 001_Revision-Ib.ipynb  002_Mapas-iluminancia-horarios.ipynb  003_UDI.ipynb  004-0_comparacion-evalglare-DGPs.ipynb  004-1_DGPs.ipynb  999_illuminance_map.ipynb
scripts/: 001_RevisionIb.py  002_iluminancia-anual-2fase_article.py  002_iluminancia-anual-2fases.py  003_2fases_DDS.py  26_junio.txt  hdrtojpg.py  nohup.out  run_radiance_A40-1_codex.sh  start
(+7 files in other folders)
